# paper_implementations

./: .gitignore  README.md  main.py  pyproject.toml
batch_norm/: batchnorm.py  paper.html  paper.md
layer_norm/: layernorm.html  layernorm.md  layernorm.py
resnet/: model_cifar10.py  model_imagenet.py  paper.html  paper.md  train.py
resnet/wandb/: latest-run
resnet/wandb/run-20251222_211526-xke6cyc1/files/: requirements.txt  wandb-metadata.json
transformer/: attention.html  attention.md  transformer.py
