[project]
name = "paper-implementations"
version = "0.1.0"
description = "Paper implementations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "huggingface>=0.0.1",
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
